# 1brc

./: Cargo.toml  README.md  profile.sh
examples/: simple_parser.rs
src/: build_input.rs  lib.rs  main.rs
