[package]
name = "brc"
version = "0.1.0"
edition = "2024"

[features]
profiled = ["dep:pprof"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
rand = "0.9.2"
rand_distr = "0.5.1"

[profile.profiled]
inherits = "release"
opt-level = 3
debug = 2
strip = "none"
force-frame-pointers = true
